--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
        
     </head>
     <body>
-        
+        <div class="container-fluid">
+          <div class="container text-center">
+             <div class="row">
+                   <div class="col">
+                      <H1>Politiskie režīmi</H1>
+                     <ol>
+                      <li>Kas vispār ir politiskais režīms</li>
+                      <li>Režīmi</li>
+                      <li>Varas sadalījums</li>
+                     <li>Politiskā vara</li>
+                     <li>Varas iegūšanas veids</li>
+                      <li>Kādas ir vēlēšanas?(Vēlēšanu sistēma)</li>
+                     <li>Varas institūciju atbildība</li>
+                     <li>Politisko lēmumu pieņemšanas veids</li>
+                     <li>Attiecības starp varu un sabiedrību</li>
+                     <li>Informācijas pieejamība</li>
+                     <li>Vadonības kults</li>
+                     <li>Sistēmas stiprās un vājās puses</li>
+                     <li>Atsauces</li>
+                     </ol>
+                  </div>
+                  <div class="col">
+
+                  </div>
+                  <div class="col-9">
+                     <h2>Kas ir politiskais režīms?</h2>
+                     <p>Politikā režīms ir valdības forma vai noteikumu kopums, kultūras vai sociālās normas utt., kas regulē valdības vai institūcijas darbību un tās mijiedarbību ar sabiedrību. Divas plašās režīmu kategorijas, kas parādās lielākajā daļā literatūras, ir demokrātiskais un autokrātiskais.</p>
+                 </div>
+              </div>
+          </div>  
+      </div>
     </body>
 </html>
