--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         scrollbar-width: none;  
         }
         body {
-  font-family: Georgia, serif;
+  font-family: Copperplate, Papyrus, fantasy;
 }
        </style>
     </head>
