--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
        <style>
         ul {
   border-left: 5px solid rgb(194, 49, 49);
@@ -26,14 +26,8 @@
         -ms-overflow-style: none; 
         scrollbar-width: none;  
         }
-        @font-face {
-  font-family: Hex Franklin Tight;
-  src: url("/static/fonts/hex-franklin/HEX_Franklin_v0.2_Tyght_Variable-subset.woff2") format("woff2");
-  unicode-range: U+20, U+21, U+23, U+24, U+26, U+28, U+29, U+2B-3C, U+3E-5B, U+5D, U+5F, U+7E, U+B7, U+D7, U+E9, U+FC, U+2013, U+2014, U+2019, U+201C, U+201D, U+2026, U+2116, U+25A2;
-  font-weight: 900;
-  font-style: normal;
-  font-display: swap;
-  size-adjust: 110%;
+        body {
+  font-family: "Trirong", serif;
 }
        </style>
     </head>
