--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         scrollbar-width: none;  
         }
         body {
-  font-family: "Optima", sans-serif;
+  font-family: "Trirong", serif;
 }
        </style>
     </head>
