--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="container ">
              <div class="row vh-100">
                    <div class="col">
-                      <H1 class="text-center">Politiskie režīmi</H1>
+                      <H1 class="p-3 text-center">Politiskie režīmi</H1>
                      <ul>
                       <li>Kas ir politiskais režīms</li>
                       <li>Režīmi</li>
