--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
        <style>
         ul {
-  border-left: 5px solid rgb(194, 49, 49);
+  border-left: 5px solid rgb(188, 32, 32);
   background-color: #f1f1f1;
   list-style-type: none;
   padding: 10px 20px;
@@ -36,7 +36,7 @@
           <div class="container ">
              <div class="row vh-100">
                    <div class="col">
-                      <H1 class="p-3 text-center">Politiskie režīmi</H1>
+                      <H1 class="p-1 text-center">Politiskie režīmi</H1>
                      <ul>
                       <li>Kas ir politiskais režīms</li>
                       <li>Režīmi</li>
@@ -55,7 +55,7 @@
                      </ul>
                   </div>
                   <div class="col-9 overflow-auto h-100">
-                    <div class="rounded-5 p-3 fons m-1">
+                    <div class=" p-2 fons m-1">
                      <h2  class = "text-center" >Kas ir politiskais režīms?</h2>
                      <p >Politikā režīms ir valdības forma vai noteikumu kopums, kultūras vai sociālās normas utt., kas regulē valdības vai institūcijas darbību un tās mijiedarbību ar sabiedrību. Trīs plašās režīmu kategorijas, kas parādās lielākajā daļā literatūras, ir demokrātiskais un autoritārais un totalitārais.</p>
                     </div>
