--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                      <p >Politikā režīms ir valdības forma vai noteikumu kopums, kultūras vai sociālās normas utt., kas regulē valdības vai institūcijas darbību un tās mijiedarbību ar sabiedrību. Trīs plašās režīmu kategorijas, kas parādās lielākajā daļā literatūras, ir demokrātiskais un autoritārais un totalitārais.</p>
                     </div>
                     <div class="rounded-5 p-3 fons m-1">
-                     <h2 class="text-center">Režīmivv</h3>
+                     <h2 class="text-center">Režīmi</h3>
                      <p > Kopā ir 3 režīmi, demokrātiskais, autoritārais un totalitārais. Latvija ir demokrātiska valsts, to garantē Latvijas Satversme. Pirmais pants nosaka, ka Latvija ir demokrātiska republika, 2.pants, ka vara pieder Latvijas tautai. Cilvēktiesību jautājumi aplūkoti Satversmes 8.nodaļā. 
                         f64_satversme_130612_028.jpg
                         LR Satversme, Pamatlikums, foto - fotoaģentūra F64 </p>
