--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                      </ul>
                   </div>
                   <div class="col-9 overflow-auto h-100">
-                    <div class=" rounded-5 fons m-1">
-                     <h2  class = " p-3 text-center" >Kas ir politiskais režīms?</h2>
+                    <div class=" rounded-5 p-3 fons m-1">
+                     <h2  class = " text-center" >Kas ir politiskais režīms?</h2>
                      <p >Politikā režīms ir valdības forma vai noteikumu kopums, kultūras vai sociālās normas utt., kas regulē valdības vai institūcijas darbību un tās mijiedarbību ar sabiedrību. Trīs plašās režīmu kategorijas, kas parādās lielākajā daļā literatūras, ir demokrātiskais un autoritārais un totalitārais.</p>
                     </div>
                     <div class="rounded-5 p-3 fons m-1">
