--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="lv">
     <head>
+        <meta charset="utf-8">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
        <style>
@@ -18,6 +19,10 @@
         -ms-overflow-style: none; 
         scrollbar-width: none;  
         }
+    a {
+        color: black;
+        text-decoration: none;
+    }
        </style>
     </head>
     <body>
@@ -27,8 +32,8 @@
                    <div class="col">
                       <H1 class="rounded-5 p-2 m-1 text-center">Politiskie režīmi</H1>
                      <ul class="rounded-5 p-5">
-                      <li>Kas ir politiskais režīms</li>
-                      <li>Režīmi</li>
+                      <a href="#kasIr"><li>Kas ir politiskais režīms</li> </a>
+                      <a href="#rezimi"><li>Režīmi</li></a>
                       <li>Varas sadalījums</li>
                      <li>Politiskā vara</li>
                      <li>Varas iegūšanas veids</li>
@@ -44,11 +49,11 @@
                      </ul>
                   </div>
                   <div class="col-9 overflow-auto h-100">
-                    <div class="rounded-5 p-3 fons m-1">
+                    <div id="kasIr" class="rounded-5 p-3 fons m-1">
                      <h2  class = "text-center" >Kas ir politiskais režīms?</h2>
                      <p >Politikā režīms ir valdības forma vai noteikumu kopums, kultūras vai sociālās normas utt., kas regulē valdības vai institūcijas darbību un tās mijiedarbību ar sabiedrību. Trīs plašās režīmu kategorijas, kas parādās lielākajā daļā literatūras, ir demokrātiskais un autoritārais un totalitārais.</p>
                     </div>
-                    <div class="rounded-5 p-3 fons m-1">
+                    <div id="rezimi" class="rounded-5 p-3 fons m-1">
                      <h2 class="text-center">Režīmi</h3>
                      <p > Kopā ir 3 režīmi, demokrātiskais, autoritārais un totalitārais. Latvija ir demokrātiska valsts, to garantē Latvijas Satversme. Pirmais pants nosaka, ka Latvija ir demokrātiska republika, 2.pants, ka vara pieder Latvijas tautai. Cilvēktiesību jautājumi aplūkoti Satversmes 8.nodaļā. 
                         f64_satversme_130612_028.jpg
