--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
              <div class="row vh-100">
                    <div class="col">
                       <H1 class="rounded-5 p-2 m-1 text-center">Politiskie režīmi</H1>
-                     <ul class="rounded-5 p-5">
-                      <a href="#kasIr"><li>Kas ir politiskais režīms</li> </a>
+                     <ul class=" p-3">
+                      <a href="KasIr"><li>Kas ir politiskais režīms</li></a>
                       <a href="#rezimi"><li>Režīmi</li></a>
-                      <li>Varas sadalījums</li>
-                     <li>Politiskā vara</li>
-                     <li>Varas iegūšanas veids</li>
-                      <li>Kādas ir vēlēšanas?(Vēlēšanu sistēma)</li>
-                     <li>Varas institūciju atbildība</li>
-                     <li>Politisko lēmumu pieņemšanas veids</li>
-                     <li>Attiecības starp varu un sabiedrību</li>
-                     <li>Informācijas pieejamība</li>
-                     <li>Vadonības kults</li>
-                     <li>Terors</li>
-                     <li>Sistēmas stiprās un vājās puses</li>
-                     <li>Atsauces</li>
+                      <a href="#varassadalijums"><li>Varas sadalījums</li></a>
+                     <a href="#politiska"><li>Politiskā vara</li></a>
+                     <a href="#veidss"><li>Varas iegūšanas veids</li></a>
+                      <a href="#velesanas"><li>Kādas ir vēlēšanas?(Vēlēšanu sistēma)</li></a>
+                     <a href="#atbildiba"><li>Varas institūciju atbildība</li></a>
+                     <a href="#veids2"><li>Politisko lēmumu pieņemšanas veids</li></a>
+                     <a href="#attiecibas"><li>Attiecības starp varu un sabiedrību</li></a>
+                     <a href="#info"><li>Informācijas pieejamība</li></a>
+                     <a href="#kults"><li>Vadonības kults</li></a>
+                     <a href="#terors"><li>Terors</li></a>
+                     <a href="#puses"><li>Sistēmu stiprās un vājās puses</li></a>
+                     <li>Atsauces</li></a>
                      </ul>
                   </div>
                   <div class="col-9 overflow-auto h-100">
@@ -80,72 +80,70 @@
                         Autoritārisms Latvijā pastāvēja līdz Padomju okupācijai 1940.gada jūnijā.
                         Totalitārisms ir politiskā sistēma, kurā valsti pārvalda bez sabiedrības līdzdalības, lēmumi totalitārismā tiek pieņemti bez saskaņošanas ar sabiedrības vairākumu; nozīmīgākās sociālās, ekonomiskās un politiskās darbības totalitārā režīmā kontrolē valsts. Tas ir diktatūras veids, kurā vara ierobežo cilvēku visās jomās. Diktatūras apstākļos vara pieder nelielam cilvēku lokam vai pat vienam cilvēkam.</p>
                     </div>
-                    <div class="rounded-5 p-4 fons m-1">
+                    <div id="varassadalijums" class="rounded-5 p-4 fons m-1">
                         <h2 class="p-2">Varas sadalījums</h4>
                      <p><b>Demokrātija</b> dalas 3 varās- likumdevējvara, izpildvara un tiesu vara. <hr> <b>Autoritārismā</b> vien centrāla varas struktūra kontrolē lielu daļu varas, vai/iespējams atsevišķos reģionos ir ierobežota vara. <hr><b>Totalitārismā</b> absolūta un visaptveroša varas kontrole, valsts kontrolē visu.</p>
                     </div>
-                    <div class="rounded-5 p-4 fons m-1">
+                    <div id="politiska" class="rounded-5 p-4 fons m-1">
                      <h2 class="p-2">Politiskā vara</h2>
                      <p><b>Demokrātijā</b> tiek piešķirta tautas izvēlei, balsojot par pārstāvjiem vai politikas lēmumiem. Politiskā vara pieder tautai. <hr> <b>Autoritārismā</b> politiskā vara balstās uz vienas personas vai partijas varu, kurai ir plašas pilnvaras lēmumu pieņemšanai. <hr><b>Totalitārismā</b> valsts kontrolē visus politiskos aspektus un regulē</p>
                     </div>
-                    <div class="rounded-5 p-4 fons m-1">
+                    <div id="veidss" class="rounded-5 p-4 fons m-1">
                      <h2 class="p-2">Varas iegūšanas veids</h2>
                      <p><b>Demokrātija</b>- (Vēlēšanu ceļā) Iegūst varu, ievērojot vēlētāju gribu caur brīvām vēlēšanām un politisko konkurenci. <hr> 
                         <b>Autoritārisms</b>-Varu iegūst caur valsts apvērsumu. Bieži vien varas iegūšana notiek arī caur kontrolētu vēlēšanu procesu. <hr>
                         <b>Totalitārisms</b>-Varu gūst militārā apvērsumā- izmantojot represijas, manipulāciju un ierobežojot pilsoņu brīvības un tiesības.
                      </p>
                     </div>
-                    <div class="rounded-5 p-4 fons m-1">
+                    <div id="velesanas" class="rounded-5 p-4 fons m-1">
                         <h2 class="rounded-5 p-2">Kādas ir vēlēšanas? (Vēlēšanu sitēma)</h2>
                         <p><b>Demokrātija</b>- vēlēšanas ir brīvas. Tās ir atklātas vēlēšanas, kur pilsoņi balso par savām izvēlētajām partijām vai kandidātiem. Bieži tiek izmantota proporcionālā vēlēšanu sistēma vai vairākuma vēlēšanu sistēma.<hr> 
                            <b>Autoritārismā</b> ir tikai viena partija. Vēlēšanas ir ierobežotas vai kontrolētas, lai nodrošinātu esošās varas turpināšanos vai dominanci.                           <hr>
                            <b>Totalitārisms</b>-vēlēšanu nav, jo ir viens vadošais vadonis. Tās var notikt, bet tās ir kā politiska fikcija.
                         </p>
                        </div>
-                       <div class="rounded-5 p-4 fons m-1">
+                       <div id="atbildiba" class="rounded-5 p-4 fons m-1">
                         <h2 class="rounded-5 p-2">Varas institūciju atbildība</h2>
                         <p><b>Demokrātija</b>- Varas iestādes ir atbildīgas iedzīvotājiem un tiek uzraudzītas, lai nodrošinātu demokrātijas principu ievērošanu.<hr> 
                            <b>Autoritārisms</b>-Varas iestādes nav tik pārredzamas un neatkarīgas, un tās nav tieši atbildīgas iedzīvotājiem. Atbildīgas tiekai vadoņa un institūcijas priekšā.<hr>
                            <b>Totalitārisms</b>-Varas iestādes ir pilnīgi kontrolētas un nav atbildīgas sabiedrībai, bet gan tikai vadītājam.
                         </p>
                        </div>
-                       <div class="rounded-5 p-4 fons m-1">
+                       <div id="veids2" class="rounded-5 p-4 fons m-1">
                         <h2 class="rounded-5 p-1">Politisko lēmumu pieņemšanas veids</h2>
                         <p><b>Demokrātijā</b> notiek caur publisku diskusiju, debates un balsošanu, kur iedzīvotājiem ir iespēja ietekmēt politiskos lēmumus, balsojot par saviem pārstāvjiem vai par konkrētiem jautājumiem.<hr> 
                            <b>Autoritārisms</b>-Lēmumu pieņem centrālā vara, un iedzīvotājiem var būt ierobežota vai nekāda iespēja piedalīties politiskajā procesā. To sauc par cenzūru.<hr>
                            <b>Totalitārisms</b>-Notiek centrālajā līmenī, (teikšana tajā ir tikai un vienīgi vadītājam/ diktatoram) pilnīgi neatkarīgi no sabiedrības viedokļa vai vēlmēm.
                        </div>
-                       <div class="rounded-5 p-4 fons m-1">
+                       <div id="attiecibas" class="rounded-5 p-4 fons m-1">
                         <h2 class="rounded-5 p-2">Attiecības starp varu un sabiedrību</h2>
                         <p><b>Demokrātijā</b>varas attiecības balstās uz pilsoņu iesaistīšanu un pārredzamību. Varas institūcijas atbild sabiedrībai un cenšas darboties saskaņā ar tās interesēm.<hr> 
                            <b>Autoritārisms</b>-Varas attiecības ir vairāk centrētas uz autoritāro valdību, kas ir attālināta no sabiedrības vēlmēm un interesēm.<hr>
                            <b>Totalitārās</b>valdības cenšas kontrolēt un ietekmēt gandrīz visu sabiedrību, atņemot indivīdiem brīvību un personīgo izvēli.
                        </div>
-                       <div class="rounded-5 p-4 fons m-1">
+                       <div id="info" class="rounded-5 p-4 fons m-1">
                         <h2 class="rounded-5 p-2">Informācijas pieejamība</h2>
                         <p><b>Demokrātija</b>-Plaša informācijas pieejamība ir būtiska demokrātijai, lai pilsoņi varētu pieņemt informētus lēmumus un uzraudzīt valdību <hr> 
                            <b>Autoritārisms</b>-Informācijas pieejamība var būt ierobežota vai kontrolēta ar lielu cenzūru, lai saglabātu esošo varu un vadītu sabiedrību atbilstoši valdības interesēm.<hr>
                            <b>Totalitārisms</b>-Informācijas kontrole ir stingra un kontrolēta, lai nodrošinātu totalitārā režīma pastāvēšanu, ierobežojot vai filtrējot informāciju atbilstoši valdības vajadzībām.
                        </div>
-                       <div class="rounded-5 p-4 fons m-1">
+                       <div id="kults" class="rounded-5 p-4 fons m-1">
                         <h2 class="rounded-5 p-2">Vadonības kults</h2>
                         <p><b>Demokrātija</b>-Vadonības kulta attīstība parasti ir mazāka, jo demokrātiskās sabiedrības vairāk koncentrējas uz kolektīvo lēmumu pieņemšanu. Tādejādi sakot tās nav.<hr> 
                            <b>Autoritārisma</b>- režīmi var attīstīt vadonības kultu, lai stiprinātu vadītāju autoritāti un varu, izcelot viņu kā valsts simbolu.<hr>
                            <b>Totalitārisma</b>- režīmi bieži izveido vadonības kultu, kur viens vadītājs vai partija tiek uzskatīta par neapstrīdamu autoritāti un simbolu, kura apkārtējai sabiedrībai ir jāciena un jāpavada.
                        </div>
-                       <div class="rounded-5 p-4 fons m-1">
+                       <div id="terors" class="rounded-5 p-4 fons m-1">
                         <h2 class="p-2">Terors</h2>
                         <p><b>Demokrātija</b>-Pretojas, likumdošana <hr> 
                            <b>Autoritārisms</b>-Nepastāv<hr>
                            <b>Totalitārisms</b>-Ideoloģiskais terors, ziņošana par citiem
                        </div>
-                       <div class="rounded-5 p-4 fons m-1">
-                        <h2 class=" p-2">Sistēmu stiprās puses</h2>
+                       <div id="puses" class="rounded-5 p-4 fons m-1">
+                        <h2  class=" p-2">Sistēmu stiprās puses</h2>
                         <p><b>Demokrātija</b>-iedzīvotāju līdzdalība, paredzemība un atbildība, cilvēktiesību aizsardzība, plašs brīvību spektrs, brīvas vēlēšanas, varas nodalīšana. <hr> 
                            <b>Autoritārisms</b>-straujāka/ ātrāka lēmumu pieņemšana, stabilitāte un kārtība, ekonomiskā izaugsme.<hr>
                            <b>Totalitārisms</b>-centralizēta varas kontrole, spēcīga vadības autoritāte, pilnīga politiskā kontrole, augsta mobilizācija.
-                       </div>
-                       <div class="rounded-5 p-4 fons m-1">
                         <h2 class=" p-2">Sistēmu vājās puses</h2>
                         <p><b>Demokrātija</b>-lēns lēmumumu pieņemšanas laiks, balsu nevienlīdzības ietekme, mazāks efektivitātes līmenis, birokrātiskais aparāts.<hr> 
                            <b>Autoritārisms</b>-ierobežota brīvība un iespējas, pilnvaru ļaunprātīga izmantošana, nespēja pielāgoties mainīgajai sabiedrībai vai varai, ierēdņu patvara<hr>
