--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="lv">
     <head>
+        <title>Politiskie režīmi</title>
         <meta charset="utf-8">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+
+   <script>
+        function vajas() {
+        document.getElementById("vajas").classList.remove("d-none")
+        document.getElementById("stipras").classList.add("d-none")
+      }
+      function stipras(){
+        document.getElementById("stipras").classList.remove("d-none")
+        document.getElementById("vajas").classList.add("d-none")
+      }
+   </script>
        <style>
         ul {
   border-left: 5px solid rgb(188, 32, 32);
@@ -32,7 +44,7 @@
         text-decoration: none;
     }
         body {
-  font-family: "Trirong", serif;
+  font-family: "OCR A Std, monospace";
 }
        </style>
     </head>
@@ -43,7 +55,7 @@
                    <div class="col">
                       <H1 class="rounded-5 p-2 m-1 text-center">Politiskie režīmi</H1>
                      <ul class=" p-3">
-                      <a href="KasIr"><li>Kas ir politiskais režīms</li></a>
+                      <a href="#kasIr"><li>Kas ir politiskais režīms</li></a>
                       <a href="#rezimi"><li>Režīmi</li></a>
                       <a href="#varassadalijums"><li>Varas sadalījums</li></a>
                      <a href="#politiska"><li>Politiskā vara</li></a>
@@ -66,19 +78,10 @@
                     </div>
                     <div id="rezimi" class="rounded-5 p-3 fons m-1">
                      <h2 class="text-center">Režīmi</h3>
-                     <p > Kopā ir 3 režīmi, demokrātiskais, autoritārais un totalitārais. Latvija ir demokrātiska valsts, to garantē Latvijas Satversme. Pirmais pants nosaka, ka Latvija ir demokrātiska republika, 2.pants, ka vara pieder Latvijas tautai. Cilvēktiesību jautājumi aplūkoti Satversmes 8.nodaļā. 
-                        f64_satversme_130612_028.jpg
-                        LR Satversme, Pamatlikums, foto - fotoaģentūra F64 </p>
-                          <p>
-                        Latvijā nav likuma, kas nosaka vispārējus iedzīvotāju pienākumus pret valsti, tiek uzskatīts, ka ikviena cilvēka pienākums ir ievērot likumus. Likumos ir norādīti atsevišķu sociālo un profesionālo grupu, arī amatpersonu pienākumi.
-                        <b>Autoritārisms</b> ir politiskā sistēma, kurai raksturīga varas koncentrācija viena vadoņa rokās. Tai ir raksturīga antidemokrātiska valsts pārvaldes sistēma, kas izveidota, lai nodrošinātu iedzīvotāju bezierunu pakļaušanos vadonim un valsts varai. Vara tiek koncentrēta diktatora rokās, kurš kontrolē visas varas iestādes. Savu varu pār sabiedrību vadonis uztur ar karaspēka, drošības dienestu un paklausīga birokrātiskā aparāta palīdzību.
-                        Dažkārt autoritāras varas pretinieki tiek vajāti vai pat fiziski iznīcināti. Autoritārā valstī var notikt vēlēšanas, tomēr tās nav demokrātiskas. Uz galveno valsts amatu parasti kandidē pats diktators, lai viņa vara izskatītos likumīga. Latvijā autoritārisms bija pēc 1934.gada 15.maija apvērsuma, kad varu savās rokās sagrāba Kārlis Ulmanis ar uzticamām aizsargu vienībām.
-                         
-                        Karlis_Ulmanis.jpg
-                        Kārlis Ulmanis, Latvijas Valsts vadītājs autoritārisma periodā
-                         
-                        Autoritārisms Latvijā pastāvēja līdz Padomju okupācijai 1940.gada jūnijā.
-                        Totalitārisms ir politiskā sistēma, kurā valsti pārvalda bez sabiedrības līdzdalības, lēmumi totalitārismā tiek pieņemti bez saskaņošanas ar sabiedrības vairākumu; nozīmīgākās sociālās, ekonomiskās un politiskās darbības totalitārā režīmā kontrolē valsts. Tas ir diktatūras veids, kurā vara ierobežo cilvēku visās jomās. Diktatūras apstākļos vara pieder nelielam cilvēku lokam vai pat vienam cilvēkam.</p>
+                     <p > Kopā ir 3 režīmi, demokrātiskais, autoritārais un totalitārais. </p>
+                       <p> Latvija ir demokrātiska valsts, to garantē Latvijas Satversme. Pirmais pants nosaka, ka Latvija ir demokrātiska republika, 2.pants, ka vara pieder Latvijas tautai. Cilvēktiesību jautājumi aplūkoti Satversmes 8.nodaļā. Latvijā nav likuma, kas nosaka vispārējus iedzīvotāju pienākumus pret valsti, tiek uzskatīts, ka ikviena cilvēka pienākums ir ievērot likumus. Likumos ir norādīti atsevišķu sociālo un profesionālo grupu, arī amatpersonu pienākumi.</p>
+                        <p> Autoritārisms ir politiskā sistēma, kurai raksturīga varas koncentrācija viena vadoņa rokās. Tai ir raksturīga antidemokrātiska valsts pārvaldes sistēma, kas izveidota, lai nodrošinātu iedzīvotāju bezierunu pakļaušanos vadonim un valsts varai. Vara tiek koncentrēta diktatora rokās, kurš kontrolē visas varas iestādes. Savu varu pār sabiedrību vadonis uztur ar karaspēka, drošības dienestu un paklausīga birokrātiskā aparāta palīdzību. Dažkārt autoritāras varas pretinieki tiek vajāti vai pat fiziski iznīcināti. Autoritārā valstī var notikt vēlēšanas, tomēr tās nav demokrātiskas. Uz galveno valsts amatu parasti kandidē pats diktators, lai viņa vara izskatītos likumīga. Latvijā autoritārisms bija pēc 1934.gada 15.maija apvērsuma, kad varu savās rokās sagrāba Kārlis Ulmanis ar uzticamām aizsargu vienībām. Autoritārisms Latvijā pastāvēja līdz Padomju okupācijai 1940.gada jūnijā.</p>
+                       <p> Totalitārisms ir politiskā sistēma, kurā valsti pārvalda bez sabiedrības līdzdalības, lēmumi totalitārismā tiek pieņemti bez saskaņošanas ar sabiedrības vairākumu; nozīmīgākās sociālās, ekonomiskās un politiskās darbības totalitārā režīmā kontrolē valsts. Tas ir diktatūras veids, kurā vara ierobežo cilvēku visās jomās. Diktatūras apstākļos vara pieder nelielam cilvēku lokam vai pat vienam cilvēkam.</p>
                     </div>
                     <div id="varassadalijums" class="rounded-5 p-4 fons m-1">
                         <h2 class="p-2">Varas sadalījums</h4>
@@ -140,15 +143,24 @@
                            <b>Totalitārisms</b>-Ideoloģiskais terors, ziņošana par citiem
                        </div>
                        <div id="puses" class="rounded-5 p-4 fons m-1">
-                        <h2  class=" p-2">Sistēmu stiprās puses</h2>
+                        <button class="rounded-5 p-3" onclick="vajas()">Sistēmas vājās puses</button>
+                        <button class="rounded-5 p-3" onclick="stipras()">Sistēmas stiprās puses</button>
+                        <br>
+                        <div id="stipras" class="d-none">
+                        <h2 class="p-2">Sistēmas stiprās puses</h2>
                         <p><b>Demokrātija</b>-iedzīvotāju līdzdalība, paredzemība un atbildība, cilvēktiesību aizsardzība, plašs brīvību spektrs, brīvas vēlēšanas, varas nodalīšana. <hr> 
                            <b>Autoritārisms</b>-straujāka/ ātrāka lēmumu pieņemšana, stabilitāte un kārtība, ekonomiskā izaugsme.<hr>
                            <b>Totalitārisms</b>-centralizēta varas kontrole, spēcīga vadības autoritāte, pilnīga politiskā kontrole, augsta mobilizācija.
-                        <h2 class=" p-2">Sistēmu vājās puses</h2>
+                        </p>
+                        </div>
+                        <div id="vajas" class="d-none">
+                        <h2 class=" p-2">Sistēmas vājās puses</h2>
                         <p><b>Demokrātija</b>-lēns lēmumumu pieņemšanas laiks, balsu nevienlīdzības ietekme, mazāks efektivitātes līmenis, birokrātiskais aparāts.<hr> 
                            <b>Autoritārisms</b>-ierobežota brīvība un iespējas, pilnvaru ļaunprātīga izmantošana, nespēja pielāgoties mainīgajai sabiedrībai vai varai, ierēdņu patvara<hr>
                            <b>Totalitārisms</b>-sistēmas nestabilitāte, pilnīga brīvības zaudēšana, represijas, brīvības un cilvēktiesību pārkāpumi, sabiedrības neapmierinātība un rezistence, plašs/ liels spiegu loks,ideoloģija tiek uzspiesta jau agrā vecumā, pastav fizisks terors (kas var pat iznīcināt nāciju, tautību, valsti, u.t.t.).
-                       </div>
+                            </p>
+                        </div>
+                        </div>
 
                  </div>
               </div>
